2004-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-topic.el (gnus-topic-hierarchical-parameters): Use
	gnus-current-topics instead of gnus-current-topic.

2004-10-06  Jesper Harder  <harder@ifa.au.dk>

	* gnus-sum.el (gnus-summary-show-article): Use with-current-buffer.

2004-10-05  Jesper Harder  <harder@ifa.au.dk>

	* nnsoup.el (nnsoup-read-active-file): Use dolist, mapc or last
	where approriate.

	* nnml.el (nnml-generate-active-info): do.

	* nndiary.el (nndiary-generate-active-info): do.

	* gnus-topic.el (gnus-topic-hierarchical-parameters): do.
	(gnus-topic-move): do.

	* gnus-sum.el (gnus-data-enter-list, gnus-summary-process-mark-set)
	(gnus-summary-set-local-parameters, gnus-summary-read-document): do.

	* gnus-srvr.el (gnus-server-prepare)
	(gnus-server-open-all-servers): do.

	* gnus-msg.el (gnus-summary-cancel-article)
	(gnus-summary-resend-message)
	(gnus-summary-mail-crosspost-complaint): do.

	* gnus-move.el (gnus-change-server): do.

	* gnus-group.el (gnus-group-unmark-all-groups)
	(gnus-group-set-current-level): do.

2004-10-04  Simon Josefsson  <jas@extundo.com>

	* message.el (message-generate-hashcash): Doc fix.

2004-10-02  Kevin Greiner  <kgreiner@compsol.cc>

	* nnagent.el (nnagent-request-type): Bind gnus-agent to nil to
	avoid infinite recursion via gnus-get-function.

2004-10-02  Jesper Harder  <harder@ifa.au.dk>

	* mm-partial.el (mm-partial-find-parts): Use with-current-buffer.

	* nnfolder.el (nnfolder-generate-active-file): Use dolist.

	* nnmail.el (nnmail-split-history): do.

	* nnml.el (nnml-generate-nov-databases-1, nnml-request-rename-group)
	(nnml-request-delete-group): do.

	* nnslashdot.el (nnslashdot-read-groups): do.

	* nnsoup.el (nnsoup-delete-unreferenced-message-files): do.
	(nnsoup-unpack-packets, nnsoup-make-active): Simplify.

	* nnspool.el (nnspool-find-id): Use with-temp-buffer.
	(nnspool-sift-nov-with-sed): Use last
	(nnspool-retrieve-headers-with-nov): Use mapc.
	(nnspool-request-newgroups): Use dolist.