@@ -7166,7 +7166,6 @@ be displayed."
   (let ((mm-verify-option 'known)
 	(mm-decrypt-option 'known)
 	(gnus-article-emulate-mime t)
-	(mm-fill-flowed nil)
 	(gnus-buttonized-mime-types (append (list "multipart/signed"
 						  "multipart/encrypted")
 					    gnus-buttonized-mime-types)))
